feat(auth): add session check
